--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME="Nigeria Union of Pensioners"
 APP_ENV=local
-APP_KEY=base64:mKDo6bjl3wwHBX9iZ0/PQUIGPEHRPG7g12ZDt5aYbiA=
+APP_KEY="base64:mKDo6bjl3wwHBX9iZ0/PQUIGPEHRPG7g12ZDt5aYbiA="
 APP_DEBUG=true
-APP_URL=http://127.0.0.1/penx/public
+APP_URL="http://127.0.0.1/penx/public"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=pension_db
 DB_USERNAME=admin_user
-DB_PASSWORD=Babachine@11@11
+DB_PASSWORD="Babachine@11@11"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
