--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=pension_db
+DB_DATABASE=pensions
 DB_USERNAME=admin_user
 DB_PASSWORD="Babachine@11@11"
 
