--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=suexjziq_loosp
+#DB_DATABASE=suexjziq_loosp
+DB_DATABASE=latest_pen_da
 DB_USERNAME=admin_user
 DB_PASSWORD="Babachine@11@11"
 
